# geonet-obspy-utils

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
geonet_obspy_utils/clients/aws/: client.py  client_config.yml
geonet_obspy_utils/clients/aws/tests/: test_client.py
